<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    tools:context=".changecurrency.fragment.ChangeCurrencyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromCurrencyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toStartOf="@id/swapCurrencies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/fromCurrencySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_currency" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/swapCurrencies"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_switch"
        app:layout_constraintBottom_toBottomOf="@id/fromCurrencyLayout"
        app:layout_constraintEnd_toStartOf="@id/toCurrencyLayout"
        app:layout_constraintStart_toEndOf="@id/fromCurrencyLayout"
        app:layout_constraintTop_toTopOf="@id/fromCurrencyLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/toCurrencyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/swapCurrencies"
        app:layout_constraintTop_toTopOf="@id/fromCurrencyLayout">

        <AutoCompleteTextView
            android:id="@+id/toCurrencySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_currency" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/enter_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromCurrencyLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:text="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/convertedAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/converted_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/convertedAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:clickable="false"
            android:cursorVisible="true"
            android:focusable="false"
            android:inputType="none"
            android:longClickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/viewHistoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/view_exchange_history"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertedAmountLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
